# CardiacVolumeStitching

./: CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake
CVSAlgorithms/: CMakeLists.txt  qSlicerCVSAlgorithmsModule.cxx  qSlicerCVSAlgorithmsModule.h  qSlicerCVSAlgorithmsModuleWidget.cxx  qSlicerCVSAlgorithmsModuleWidget.h
CVSAlgorithms/Logic/: CMakeLists.txt  vtkSlicerCVSAlgorithmsLogic.cxx  vtkSlicerCVSAlgorithmsLogic.h
CVSAlgorithms/Logic/ElxIncludes/: itkAdaptiveStochasticGradientDescentOptimizer.h  itkAdvancedImageToImageMetric.h  itkAdvancedImageToImageMetric.hxx  itkCombinationImageToImageMetric.h  itkCombinationImageToImageMetric.hxx  itkGradientDescentOptimizer2.h  itkGradientDescentOptimizer2.hxx  itkImageRandomCoordinateSampler.hxx  itkImageRandomSampler.hxx  itkImageSamplerBase.h  itkImageSamplerBase.hxx  itkScaledSingleValuedCostFunction.h  itkScaledSingleValuedNonLinearOptimizer.h  itkSemiSimultaneousImageRegistrationMethod.h  itkSemiSimultaneousImageRegistrationMethod.hxx  itkStandardGradientDescentOptimizer.h
CVSAlgorithms/Logic/Testing/Cxx/: CMakeLists.txt  vtkSlicerCVSAlgorithmsLogicTest1.cxx
CVSAlgorithms/Resources/: qSlicerCVSAlgorithmsModule.qrc
CVSAlgorithms/Resources/UI/: qSlicerCVSAlgorithmsFooBarWidget.ui  qSlicerCVSAlgorithmsModuleWidget.ui
CVSAlgorithms/Widgets/: qSlicerCVSAlgorithmsFooBarWidget.cxx  qSlicerCVSAlgorithmsFooBarWidget.h
CardiacVolumeStitching/: CMakeLists.txt  CardiacVolumeStitching.py
CardiacVolumeStitching/Resources/RegistrationParameters/: Par0001Initialize-back.txt  Par0001Initialize.txt  Par0001NonRigid.txt  Par0001NonRigidTest.txt  Par0001Rigid.txt  Par0001RigidTest.txt  Par0002Rotation.txt  Par0003NonRigidGroup.txt  Par0003RigidGroup.txt
MonogenicFilter/: CMakeLists.txt  MonogenicFilter.py
MonogenicFilter/MonogenicSignal/: MonogenicSignal.py  MonogenicSignalTorch.py
SuperBuild/: External_SimpleElastix.cmake  External_elastix.cmake
